# CPPDemo

./: CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
k8s/: deployment.yaml  service.yaml
src/: hello.cpp  hello.h  main.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  test_hello.cpp
